modules/ingress/svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: ingress-nginx-deployment
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: ingress-nginx-svc
spec:
  selector:
    app: ingress-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: ingress-httpd-deployment
spec:
  selector:
    matchLabels:
      app: ingress-httpd
  replicas: 3
  template:
    metadata:
      labels:
        app: ingress-httpd
    spec:
      containers:
      - name: httpd
        image: httpd:2.4.57
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: ingress-httpd-svc
spec:
  selector:
    app: ingress-httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
