modules/ingress/ingress-http.yaml
# 参考：https://www.cnblogs.com/ggborn-001/p/16806181.html
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.ingress-http.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-svc
            port:
              number: 80
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-svc
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: ingress-httpd-svc
            port:
              number: 80
